--- a/app/src/main/res/layout/genre_item.xml
+++ b/app/src/main/res/layout/genre_item.xml
@@ -1,7 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/tvGenreName"
     android:textColor="@android:color/white"
-    android:background="@drawable/genre_chips_background"/>
+    android:background="@drawable/genre_chips_background"/>-->
+
+<com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.MaterialComponents.Chip.Filter"
+    android:id="@+id/chipGenre"
+    tools:text="CHIP_GENRE_TEST"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
